--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   },
-  "homepage":  "http://devynchew.github.io/portfolio"
+  "homepage":  "http://devynchew.github.io/personal-portfolio-v3"
 }
